--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="job-title">System Administrator</div>
             <div class="company">ILOAS</div>
             <div class="duration">December 2020 - January 2022 (1 year 2 months)</div>
-            <div class="location">Bidhannagar 700064, WB</div>
+            <div class="location">Kolkata, West Bengal,Bidhannagar 700064.</div>
             <ul class="responsibilities">
                 <li>Managed high-performance computing infrastructure for media production</li>
                 <li>Implemented secure file transfer solutions for large media assets</li>
@@ -182,7 +182,7 @@
             <div class="job-title">Head Of Information Technology</div>
             <div class="company">BFX CGI</div>
             <div class="duration">June 2009 - February 2020 (10 years 9 months)</div>
-            <div class="location">Kolkata Area, India</div>
+            <div class="location">Kolkata, West Bengal, India</div>
             <ul class="responsibilities">
                 <li>Built and managed render farm with 500+ nodes</li>
                 <li>Implemented pipeline tools using Python and MEL</li>
@@ -208,7 +208,7 @@
             </div>
             
             <div class="skill-category">
-                <h3>3D Software</h3>
+                <h3>3D Software Manage</h3>
                 <ul>
                     <li>Autodesk Maya & 3ds Max</li>
                     <li>SideFX Houdini</li>
@@ -221,7 +221,7 @@
             <div class="skill-category">
                 <h3>Pipeline Development</h3>
                 <ul>
-                    <li>Python Scripting</li>
+                    <li>Python Scripting through AI</li>
                     <li>MEL Scripting</li>
                     <li>Workflow Automation</li>
                     <li>Tool Development</li>
