--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             <!-- Add your profile picture here -->
             <!-- <img src="your-profile-pic.jpg" alt="Shaikh Rizuan Alli" class="profile-pic"> -->
             <h1>Shaikh Rizuan Alli</h1>
-            <p class="tagline">VFX Pipeline Specialist & IT Systems Professional</p>
+            <p class="tagline">CGI Pipeline Specialist & IT Systems Professional</p>
             <div class="social-links">
                 <a href="mailto:shaikhralli@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                 <a href="tel:+919804865825" aria-label="Phone"><i class="fas fa-phone"></i></a>
@@ -457,7 +457,7 @@
         <section class="section">
             <h2>About Me</h2>
             <div class="card">
-                <p>Being fascinated with the 3D and VFX industry has kept me constantly learning new things and improving my skills in 3D software. I've gained extensive knowledge about the VFX industry and project management through my professional journey.</p>
+                <p>Being fascinated with the 3D and CGI industry has kept me constantly learning new things and improving my skills in 3D software. I've gained extensive knowledge about the CGI industry and project management through my professional journey.</p>
                 
                 <p>I have hands-on experience with render managers like Renderman, Render Pal, Deadline, Royal Render, and Backburner, as well as render engines including Arnold, VRay, Redshift, and Mental Ray across various projects. I can efficiently handle Render Wrangler tasks through any offline and online render manager, such as Fox or Blaze.</p>
                 
